--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+  <!-- Meta Tag -->
+<title> Argument </title>
+</head>
+<body>
   <h1 style="color:blue"> I am the one who don't weigh a ton who don't need a gun to get respect up on the streets. </h1>
   <p style="color:red"> Whoa, no you're not </p>
   <h1 style="color:blue"> Why did you have to come back </h1>
@@ -12,4 +17,5 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/yS39_Vi2Hb0" frameborder="0" allowfullscreen></iframe>
   <h1 style="color:blue"> You Win Again -_- </h1>
   <p style="color:red"> Get dunked on </p>
-<title> Argument </title>
+</body>
+</html>
